UI fixes - account settings

--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/fragments/reset-password/reset-password.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/fragments/reset-password/reset-password.hbs
@@ -2,9 +2,9 @@
 
 <h3>{{t "user-portal.user.password.reset"}}</h3>
 <hr/>
-<div class="alert alert-info" role="alert">
-    <i class="icon fw fw-warning"></i>
-    In order to update your password, you must re-enter your current password.
+<div class="message message-info">
+    <h4><i class="icon fw fw-info"></i>{{t "user-portal.user.password.info.header"}}</h4>
+    <p>{{t "user-portal.user.password.info.body"}}</p>
 </div>
 {{#if success}}
     <div class="alert alert-success alert-dismissible fade in" role="alert">
