Fixing https://wso2.org/jira/browse/IDENTITY-5617
Conflicts:
	portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/index.hbs

--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/account/account-setting.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/account/account-setting.hbs
@@ -8,8 +8,8 @@
 {{#fillZone "breadcrumbs"}}
     <div class="breadcrumb-wrapper">
         <ol class="breadcrumb">
-            <li><a href="#"><i class="icon fw fw-home"></i> <span class="hidden-xs">Home</span></a></li>
-            <li class="active"><a href="#">Account Settings</a></li>
+            <li><a href="/user-portal"><i class="icon fw fw-home"></i> <span class="hidden-xs">{{t "user-portal.applications.breadcrumb"}} </span></a></li>
+            <li class="active"><a href="/user-portal/account/account-setting">{{t "user-portal.user.account.setting"}}</a></li>
         </ol>
     </div>
 {{/fillZone}}
