--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/index.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/index.hbs
@@ -6,7 +6,7 @@
 {{#fillZone "breadcrumbs"}}
     <div class="breadcrumb-wrapper">
         <ol class="breadcrumb">
-            <li><a href="#"><i class="icon fw fw-home"></i> <span class="hidden-xs">{{t "user-portal.applications.breadcrumb"}}</span></a></li>
+            <li><a href="/user-portal"><i class="icon fw fw-home"></i> <span class="hidden-xs">{{t "user-portal.applications.breadcrumb"}}</span></a></li>
         </ol>
     </div>
 {{/fillZone}}
