Fixing https://wso2.org/jira/browse/IDENTITY-5626

--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/account/account-setting.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/account/account-setting.hbs
@@ -47,7 +47,7 @@
                             <li>
                                 <a href="#security-questions" class="" data-toggle="tab">{{t "user-portal.user.account.securityQ"}}</a>
                             </li>
-                            <li class="collapse-li">
+                            <li class="collapse-li hide">
                                 <a data-toggle="collapse" data-parent="#acc-settings-menu" href="#asscciations-menu" class="collapsed">{{t "user-portal.user.account.association"}}<span class="arrow"></span></a>
                                 <ul class="sub-menu collapse" id="asscciations-menu">
                                     <li>
