--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/fragments/profile/profile.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/fragments/profile/profile.hbs
@@ -1,11 +1,11 @@
 {{fragment "org.wso2.carbon.uuf.common.foundation.jquery-validation"}}
 {{js "js/profile.js"}}
-<h3>{{t "user-portal.user.profile"}}</h3>
+<h3>{{t "profile"}}</h3>
 <hr/>
 {{#if success}}
     {{#if message}}
         <div class="alert alert-success" role="alert">
-            <i class="icon fw fw-success"></i><strong>{{t "user-portal.user.profile.success"}}</strong>
+            <i class="icon fw fw-success"></i><strong>{{t "profile.success"}}</strong>
             {{message}}
             <button type="button" class="close" aria-label="close" data-dismiss="alert">
                 <span aria-hidden="true">
@@ -17,7 +17,7 @@
 {{else}}
     {{#if message}}
         <div class="alert alert-danger" role="alert">
-            <i class="icon fw fw-error"></i><strong>{{t "user-portal.user.profile.failure"}}</strong>
+            <i class="icon fw fw-error"></i><strong>{{t "profile.failure"}}</strong>
             {{message}}
             <button type="button" class="close" aria-label="close" data-dismiss="alert">
                 <span aria-hidden="true">
@@ -48,10 +48,10 @@
     {{#each uiEntries}}
         <div class="form-group">
             <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
-                <label for="{{this.claimURI}}">{{this.displayName}}<span>{{requiredIcon}}</span></label>
-                <input type="{{this.dataType}}" name="{{this.claimURI}}" id="{{this.claimURI}}" class="form-control"
-                       maxlength="250" value="{{this.value}}" {{this.readonly}} {{this.required}}
-                       pattern="{{this.regex}}"  />
+                <label for="{{claimURI}}">{{displayName}}<span>{{requiredIcon}}</span></label>
+                <input type="{{dataType}}" name="{{claimURI}}" id="{{claimURI}}" class="form-control"
+                       maxlength="250" value="{{value}}" {{readonly}} {{required}}
+                       pattern="{{regex}}"  />
             </div>
         </div>
     {{/each}}
