--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/fragments/reset-password/reset-password.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/fragments/reset-password/reset-password.hbs
@@ -1,10 +1,10 @@
 {{js "js/reset-password.js"}}
 
-<h3>{{t "user-portal.user.password.reset"}}</h3>
+<h3>{{t "password.reset"}}</h3>
 <hr/>
 <div class="message message-info">
-    <h4><i class="icon fw fw-info"></i>{{t "user-portal.user.password.info.header"}}</h4>
-    <p>{{t "user-portal.user.password.info.body"}}</p>
+    <h4><i class="icon fw fw-info"></i>{{t "password.info.header"}}</h4>
+    <p>{{t "password.info.body"}}</p>
 </div>
 {{#if success}}
     <div class="alert alert-success alert-dismissible fade in" role="alert">
@@ -19,13 +19,13 @@
 
     <div class="form-group">
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
-            <label for="oldPassword">{{t "user-portal.user.password.reset.old"}}</label>
+            <label for="oldPassword">{{t "password.reset.old"}}</label>
             <input type="password" name="oldPassword" id="oldPassword" class="form-control"/>
         </div>
     </div>
     <div class="form-group password_strength_meter " >
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
-            <label for="newPassword">{{t "user-portal.user.password.reset.new"}}</label>
+            <label for="newPassword">{{t "password.reset.new"}}</label>
             <input type="password" name="newPassword" id="newPassword" class="form-control" data-schemaformat="password"/>
 
             <div id="password_strength_wrap">
@@ -47,7 +47,7 @@
     </div>
     <div class="form-group">
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
-            <label for="confirmPassword">{{t "user-portal.user.password.reset.new.confirm"}}</label>
+            <label for="confirmPassword">{{t "password.reset.new.confirm"}}</label>
             <input type="password" name="confirmPassword" id="confirmPassword" name="confirmPassword" class="form-control" />
         </div>
     </div>
