--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/login.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/login.hbs
@@ -9,7 +9,7 @@
 {{#fillZone "content"}}
     {{#if errorMessage}}
         <div class="alert alert-danger" role="alert">
-            <i class="icon fw fw-error"></i><strong>{{t "user-portal.user.login.error.default"}}</strong>&nbsp;
+            <i class="icon fw fw-error"></i><strong>{{t "login.error.default"}}</strong>&nbsp;
             {{t errorMessage}}
             <button type="button" class="close" aria-label="close" data-dismiss="alert">
                 <span aria-hidden="true">
@@ -43,7 +43,7 @@
                 <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9 login">
                     <div class="data-container">
                         <form class="form-horizontal" method="post">
-                            <h3>{{t "user-portal.user.login"}}</h3>
+                            <h3>{{t "login"}}</h3>
 
                             <div class="form-group">
                                 <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5">
@@ -63,16 +63,16 @@
                             <div class="form-group">
                                 <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5">
                                     <button type="submit"
-                                            class="btn btn-default btn-primary add-margin-right-2x">{{t "user-portal.user.login.title"}}</button>
+                                            class="btn btn-default btn-primary add-margin-right-2x">{{t "login.title"}}</button>
                                     <!--not yet implemented-->
                                     <!--<button type="submit" class="btn btn-default btn-secondary hidden-xs hidden-sm">Go Back</button>-->
                                 </div>
                             </div>
                             <!--not yet implemented-->
                             <!--<a href="{{@contextPath}}/recover-password" class="add-margin-bottom-5x remove-margin-lg remove-margin-md">Forgot Password</a>-->
-                            <p class="hidden-xs hidden-sm">{{t "user-portal.user.signup.message"}}<a
+                            <p class="hidden-xs hidden-sm">{{t "signup.message"}}<a
                                     href="{{@contextPath}}/signup">
-                                &nbsp;{{t "user-portal.user.signup.title"}}</a>
+                                &nbsp;{{t "signup.title"}}</a>
                             </p>
                         </form>
                     </div>
