Adding Page titles

--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/account/account-setting.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/account/account-setting.hbs
@@ -1,6 +1,6 @@
 {{layout "privilege"}}
 {{favicon "images/favicon.png" type="image/png"}}
-{{title "Home | " @config.appName}}
+{{title "Account Settings | " @config.appName}}
 {{fragment "org.wso2.carbon.uuf.common.foundation.jquery-validation" }}
 {{js "js/account-setting.js"}}
 {{css "css/user-portal.css"}}
