--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/login.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/login.hbs
@@ -1,6 +1,6 @@
 {{layout "unprivilege"}}
 {{favicon "images/favicon.png" type="image/png"}}
-{{title "Login | " @config.appName}}
+{{title "Sign in | " @config.appName}}
 {{css "css/user-portal.css"}}
 {{js "js/script.js"}}
 {{js "js/left-navigation.js"}}
