--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/signup.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/signup.hbs
@@ -1,7 +1,7 @@
 {{layout "unprivilege"}}
 {{favicon "images/favicon.png" type="image/png"}}
 {{fragment "org.wso2.carbon.uuf.common.foundation.jquery-validation"}}
-{{title "Home | " @config.appName}}
+{{title "Sign up | " @config.appName}}
 {{css "css/user-portal.css"}}
 {{js "js/signup.js"}}
 {{#fillZone "content"}}
