show domain dropdown in UI when there is multiple domains only

--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/signup.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/signup.hbs
@@ -44,32 +44,37 @@
                                 <div class="form-group">
                                     <div class="col-xs-18 col-sm-18 col-md-10 col-lg-8">
                                         <h3>{{t "signup.title"}}</h3>
+
                                         <p>{{t "signup.sub.title"}}</p></div>
                                 </div>
 
                                 <div class="form-group">
                                     <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5">
                                         {{#each usernameClaim}}
-                                            </br><label class="control-label" for={{claimLabel}}>{{t (stringFormat "%s%s" "claim." claimLabel)}}
+                                            </br><label class="control-label"
+                                                        for={{claimLabel}}>{{t (stringFormat "%s%s" "claim." claimLabel)}}
                                             <span>*</span></label>
                                             <input type={{#if dataType}}{{dataType}}{{else}}"text"{{/if}}
                                                     name={{claimURI}} id={{claimLabel}}
                                                     class="form-control"
                                                     pattern={{#if regex}}{{regex}}{{/if}}
-                                                    placeholder={{t "placeholder.username"}}
+                                                            placeholder={{t "placeholder.username"}}
                                                     required/>
                                         {{/each}}
                                     </div>
                                     <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5">
-                                        </br><label class="control-label" for="domain">{{t "signup.domain"}}</label></br>
+                                        {{#if domainNames}}
+                                        </br><label class="control-label"
+                                                    for="domain">{{t "signup.domain"}}</label></br>
                                         <input type="hidden" name="domainValue" id="domainValue"
                                                class="form-control"/>
                                         <select class="form-control" id="domainSelector">
-                                            <option value="default">{{t "signup.domain.placeholder"}}</option>
-                                            {{#each domainNames}}
-                                                <option value={{this}}>{{this}}</option>
-                                            {{/each}}
+                                                <option value="default">{{t "signup.domain.placeholder"}}</option>
+                                                {{#each domainNames}}
+                                                    <option value={{this}}>{{this}}</option>
+                                                {{/each}}
                                         </select>
+                                        {{/if}}
                                     </div>
                                 </div>
                                 <div class="form-group">
@@ -115,7 +120,8 @@
                                     </div>
 
                                     <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5">
-                                        <label class="control-label" for="confirmPassword">{{t "password.reset.new.confirm"}}
+                                        <label class="control-label"
+                                               for="confirmPassword">{{t "password.reset.new.confirm"}}
                                             <span>*</span></label>
                                         <input type="password" name="confirmPassword" id="confirmPassword"
                                                class="form-control" required/>
@@ -126,21 +132,23 @@
                                     {{#each signupClaims}}
                                         <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5">
                                             {{#if required}}
-                                                <label class="control-label" for={{claimLabel}}>{{t (stringFormat "%s%s" "claim." claimLabel)}}
+                                                <label class="control-label"
+                                                       for={{claimLabel}}>{{t (stringFormat "%s%s" "claim." claimLabel)}}
                                                     <span>*</span></label>
                                                 <input type={{#if dataType}}{{dataType}}{{else}}"text"{{/if}}
                                                         name={{claimURI}} id={{claimLabel}}
                                                         class="form-control"
                                                         pattern={{#if regex}}{{regex}}{{/if}}
-                                                        placeholder={{t (stringFormat "%s%s" "placeholder." claimLabel)}}
+                                                                placeholder={{t (stringFormat "%s%s" "placeholder." claimLabel)}}
                                                         required/></br>
                                             {{else}}
-                                                <label class="control-label" for={{claimLabel}}>{{t (stringFormat "%s%s" "claim." claimLabel)}}</label>
+                                                <label class="control-label"
+                                                       for={{claimLabel}}>{{t (stringFormat "%s%s" "claim." claimLabel)}}</label>
                                                 <input type={{#if dataType}}{{dataType}}{{else}}"text"{{/if}}
                                                         name={{claimURI}} id={{claimLabel}}
                                                         class="form-control"
                                                         pattern={{#if regex}}{{regex}}{{/if}}
-                                                        placeholder={{t (stringFormat "%s%s" "placeholder." claimLabel)}} /></br>
+                                                                placeholder={{t (stringFormat "%s%s" "placeholder." claimLabel)}} /></br>
                                             {{/if}}
                                         </div>
                                     {{else}}
@@ -152,7 +160,8 @@
                                 <div class="form-group">
                                     <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5">
                                         <button id="register" class="btn btn-default btn-primary add-margin-right-2x"
-                                               type="submit">{{t "signup.title"}}</button></div>
+                                                type="submit">{{t "signup.title"}}</button>
+                                    </div>
                                 </div>
                                 <h5>{{t "login.message"}}<a href="{{@contextPath}}/login">
                                     &nbsp;{{t "login.title"}}</a></h5>
