--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/public/css/user-portal.css
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/public/css/user-portal.css
@@ -350,6 +350,10 @@
     margin: 20px 0 20px;
 }
 
+.body-wrapper {
+    padding: 20px;
+}
+
 .signup-header {
     font-size: 40px;
     font-family: Arial, Helvetica, sans-serif;
