Sidebar collapsed tab color change

--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/public/css/user-portal.css
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/public/css/user-portal.css
@@ -327,7 +327,9 @@
 .settings-nav .nav-stacked > li.active, .settings-nav li ul.sub-menu > li.active{
     margin-right: -1px;
 }
-
+.nav>li>a:focus {
+    background-color: rgba(102,102,102,.25);
+}
 @media (max-width: 600px) {
     .settings-nav{
         width:100%;
