Added the complete flow with delete.
Conflicts:
	portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/fragments/security-questions/public/js/security-questions.js
	portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/fragments/security-questions/security-questions.hbs
	portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/fragments/security-questions/security-questions.js
	portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/public/css/user-portal.css
	product/carbon-home/conf/identity/challenge-questions/en_US.yaml
	product/carbon-home/resources/h2-test-data/test-data.sql

--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/layouts/privilege.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/layouts/privilege.hbs
@@ -33,6 +33,10 @@
     {{defineZone "breadcrumbs"}}
 </div>
 
+<div class="modal-container">
+    {{defineZone "modal"}}
+</div>
+
 <div class="navbar-container">
     {{defineZone "navbar"}}
 </div>
