--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/fragments/profile/profile.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/fragments/profile/profile.hbs
@@ -48,12 +48,12 @@
     {{#each uiEntries}}
         <div class="form-group">
             <div class="col-xs-12 col-sm-12 col-md-6 col-lg-5">
-                <label for="{{claimURI}}">{{displayName}}<span>{{requiredIcon}}</span></label>
+                <label class="control-label" for="{{claimURI}}">{{displayName}}<span>{{requiredIcon}}</span></label>
                 <input type="{{dataType}}" name="{{claimURI}}" id="{{claimLabel}}" class="form-control"
                        maxlength="250" value="{{value}}" {{readonly}} {{required}}
                        pattern="{{regex}}"  />
             </div>
         </div>
     {{/each}}
-    <input class="btn btn-primary add-margin-bottom-3x" type="submit" value="Update"/>
+    <input class="btn btn-primary add-margin-bottom-3x" type="submit" value="Update" />
 </form>
