--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/fragments/reset-password/reset-password.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/fragments/reset-password/reset-password.hbs
@@ -19,13 +19,13 @@
 
     <div class="form-group">
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-5">
-            <label for="oldPassword">{{t "password.reset.old"}}<span>*</span></label>
+            <label class="control-label" for="oldPassword">{{t "password.reset.old"}}<span>*</span></label>
             <input type="password" name="oldPassword" id="oldPassword" class="form-control" required/>
         </div>
     </div>
     <div class="form-group password_strength_meter " >
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-5">
-            <label for="newPassword">{{t "password.reset.new"}}<span>*</span></label>
+            <label class="control-label" for="newPassword">{{t "password.reset.new"}}<span>*</span></label>
             <input type="password" name="newPassword" id="newPassword" class="form-control" required data-schemaformat="password"/>
 
             <div id="password_strength_wrap">
@@ -47,7 +47,7 @@
     </div>
     <div class="form-group">
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-5">
-            <label for="confirmPassword">{{t "password.reset.new.confirm"}}<span>*</span></label>
+            <label class="control-label" for="confirmPassword">{{t "password.reset.new.confirm"}}<span>*</span></label>
             <input type="password" name="confirmPassword" id="confirmPassword" name="confirmPassword" class="form-control" required />
         </div>
     </div>
