--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/account/account-setting.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/account/account-setting.hbs
@@ -16,7 +16,7 @@
 
 {{#fillZone "modal"}}
     {{
-    fragment "org.wso2.carbon.uuf.common.foundation.modal"
+    fragment "org.wso2.carbon.uuf.common.foundation.ui.modal"
              id="deleteModal"
              class="additional-class"
              modalTitle="Are you sure you want to delete ?"
