Fixed issue in showing error messages in self signup

--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/fragments/security-questions/security-questions.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/fragments/security-questions/security-questions.hbs
@@ -116,7 +116,7 @@
             </div>
         </div>
         <button type="submit" class="btn btn-primary add-margin-bottom-3x" onclick="updateQuestion()">Update</button>
-        <input type="button" class="btn btn-default add-margin-bottom-3x" value="Back" onclick="goBack()">
+        <input type="button" class="btn btn-default add-margin-bottom-3x" value="Cancel" onclick="goBack()">
         <input type="hidden" id="question-id" name="question-id" value="">
         <input type="hidden" id="question-set-id" name="question-set-id" value="">
         <input type="hidden" name="action" value="update-question">
